[project]
name = "redis-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-redis>=0.1.1",
    "pydantic-ai>=1.0.6",
    "python-dotenv>=1.1.1",
    "redis-cli>=1.0.1",
    "streamlit>=1.50.0",
]
